fix margins on nav form for small screens and add overflow-y: scroll to small nav

--- a/sass/components/_nav-form.scss
+++ b/sass/components/_nav-form.scss
@@ -2,7 +2,7 @@
     border: 2px solid white;
     border-radius: .8rem;
     width: 85%;
-    margin: 0 auto 5rem auto;
+    margin: 3rem auto 3rem auto;
     padding: 1.5rem 1.7rem;
     color: white;
     text-transform: none;
