--- a/sass/layouts/_blog-navigation.scss
+++ b/sass/layouts/_blog-navigation.scss
@@ -298,9 +298,10 @@
         }
     }
 
-    // &__main {
-
-    // }
+    &__main {
+        margin-bottom: 3rem;
+        margin-top: 3rem;
+    }
 
     &__footer {
         color: white;
@@ -334,6 +335,7 @@
 
     &-in {
         right: 0;
+        overflow-y: scroll;
     }
 
     @media only screen and (max-width: 900px) {
